2006-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/rpcrt4.def: Remove "_imp__"-prefixed export symbols.
	* lib/user32.def: Likewise.

2006-09-11  Chris Sutcliffe  <ir0n3h4d@users.sourceforge.net>

	* lib/Makefile.in: fix typo.
	* lib/ddk/Makefile.in: fix typo.
	* lib/directx/Makefile.in: fix typo.

	Thanks to Keith Marshall (keithmarshall at users dot sourceforge dot net)
	for pointing it out.

2006-09-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Makefile.in: Remove files from lib directory with distclean target

2006-09-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (CS_DROPSHADOW): Define.

2006-09-08  Michael Gerdau  <mgdde@users.sourceforge.net>

	* include/uxtheme.h: (TMT_GRADIENTCOLOR4, TMT_GRADIENTCOLOR5,
	TMT_SHADOWCOLOR, TMT_GLOWCOLOR, TMT_TEXTBORDERCOLOR,
	TMT_TEXTSHADOWCOLOR, TMT_GLYPHTEXTCOLOR, TMT_GLYPHTRANSPARENTCOLOR,
	TMT_FILLCOLORHINT, TMT_BORDERCOLORHINT, TMT_ACCENTCOLORHINT):
	Increase each constant by 1.

2006-09-07  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1553275]
	* include/wingdi.h (SetLayout): Add prototype.
	(GetLayout): Likewise.

2006-09-02  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1550139]
	* include/oleauto.h (GetRecordInfoFromTypeInfo): Add prototype.
	Tanks to:  Samit Basu <samitbasu at sf dot net>
	(GetRecordInfoFromGuids): Add prototype.

2006-09-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h: Add comment about 'missing' SEM flag.

2006-08-30  Corinna Vinschen  <corinna@vinschen.de>

	* configure.in: Substitute with_cross_host in depending files.
	* configure: Regenerate.
	* lib/Makefile.in: Add with_cross_host to allow more granular checks.
	Set installation directories accordingly.
	* lib/ddk/Makefile.in: Ditto.
	* lib/directx/Makefile.in: Ditto.

2006-08-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/wtsapi32.def (WTSGetActiveConsoleSessionId). Move from here...