@@ -1166,6 +1166,7 @@ extern "C" {
 #define DM_PAPERLENGTH 0x00000004
 #define DM_PAPERWIDTH 0x00000008
 #define DM_SCALE 0x00000010
+#define DM_POSITION 0x00000020
 #define DM_COPIES 0x00000100
 #define DM_DEFAULTSOURCE 0x00000200
 #define DM_PRINTQUALITY 0x00000400
