@@ -161,11 +161,12 @@ extern "C" {
 #define CDS_NORESET	0x10000000
 #define DISP_CHANGE_SUCCESSFUL	0
 #define DISP_CHANGE_RESTART	1
-#define DISP_CHANGE_BADFLAGS	(-4)
-#define DISP_CHANGE_BADPARAM	(-5)
 #define DISP_CHANGE_FAILED	(-1)
 #define DISP_CHANGE_BADMODE	(-2)
 #define DISP_CHANGE_NOTUPDATED	(-3)
+#define DISP_CHANGE_BADFLAGS	(-4)
+#define DISP_CHANGE_BADPARAM	(-5)
+#define DISP_CHANGE_BADDUALVIEW	(-6)
 #define BST_CHECKED	1
 #define BST_INDETERMINATE	2
 #define BST_UNCHECKED	0
